# synthetic

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.docs/: future_refactor_plan.md  workflow.md
.github/workflows/: ci.yml  docs.yml
docs/: BUILD_INSTALL.md  advanced.md  advanced_features.md  advanced_workflows.md  api_reference.md  architecture.md  benchmarking.md  data_generation.md  faq.md  httpsolver_api.md  index.md  methodology.md  model_building.md  model_export.md  network_and_drug_design.md  obtaining_data.md  quick_start.md  solvers_and_simulation.md  solving_odes.md  use_cases.md
examples/: connect_http_solver.py  create_dataset.py  detailed_examples.md  export_model_sbml.py  full_example.ipynb  param_estimation.ipynb  test_parallel.py  verify_parallel.py
src/synthetic/: ArchtypeCollections.py  LinkedParameters.py  ModelBuilder.py  Reaction.py  ReactionArchtype.py  __init__.py  api.py
src/synthetic/Solver/: HTTPSolver.py  RoadrunnerSolver.py  ScipySolver.py  Solver.py  __init__.py
src/synthetic/Specs/: BaseSpec.py  DegreeInteractionSpec.py  Drug.py  DrugModelSpecification.py  MichaelisNetworkSpec.py  Regulation.py  __init__.py
src/synthetic/SyntheticGenUtils/: DataProcessingUtils.py  ParallelUtils.py  PerturbationUtils.py  README.md  SimulationUtils.py  ValidationUtils.py  __init__.py
src/synthetic/examples/: AnotherInterestingModel.pkl  FGFR4_model_rev2a.txt  InterestingSmallModel.pkl  combined_peak3.txt  example_antimony.txt  simple_peak3.txt  simple_peak3_2.txt
src/synthetic/examples/peak3/: Finalparamset-NoFix.txt  Finalparamset.txt  peak3-honours-sbml-older.xml  peak3-honours-sbml.xml  peak3_model.pkl  peak3_model_coop.pkl  peak3modelv2.pkl  peak3modelv2.txt  test_model.xml
src/synthetic/optimisation/: __init__.py  example_usage.py  parameter_optimizer.py
src/synthetic/utils/: __init__.py  config_manager.py  conserve_rules_utils.py  data_generation_helpers.py  dynamic_calculations.py  example_usage.py  initial_condition_randomizer.py  kinetic_tuner.py  make_feature_data.py  make_target_data.py  make_timecourse_data.py  parameter_mapper.py  parameter_randomizer.py  target_calculators.py
tests/: test_api.py  test_integration.py  test_parallel.py  test_pr_demo.py  test_workflow_demo.py
