[project]
name = "synthetic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dawson Lan", email = "47137689+AnEvilBurrito@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "antimony>=2.15.0",
    "joblib>=1.5.0",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "libroadrunner>=2.3.0",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
