[project]
name = "synthetic-models"
version = "0.1.3"
description = "synthetic-models is a virtual cell generation library for generating biological synthetic data that can be used for benchmarking predictive modelling workflows. The synthetic data are generated using ODE models formulated in biochemical laws common in cancer cell signalling networks. Synthetic can create datasets in the format of scikit-learn's make_regression method."
readme = "README.md"
authors = [
    { name = "Dawson Lan", email = "47137689+AnEvilBurrito@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "antimony>=2.15.0",
    "joblib>=1.5.0",
    "matplotlib>=3.10.3",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "scipy>=1.15.3",
    "sympy>=1.14.0",
    "tqdm>=4.67.1",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synthetic"]

[project.optional-dependencies]
roadrunner = [
    "libroadrunner>=2.3.0",
]
plotting = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "parallel: parallel execution tests (deselected by default, run with '-m parallel')",
]
addopts = "-m 'not parallel'"
